--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -18,6 +18,7 @@
       background-color: #D9D9D9;
       padding: 35px;
       width: 100%;
+      margin-top: 30px;
       max-width: 600px;
       box-shadow: 0 2px 12px rgba(0, 0, 0, 0.15);
     }
