--- a/templates/reporting.html
+++ b/templates/reporting.html
@@ -5,7 +5,7 @@
   <title>help</title>
   <style>
  body {
-  background-color:#360000;
+  background-color: black;
   color: white;
   font-family: Assistant, sans-serif;
   text-align: center;
@@ -18,7 +18,18 @@ h2 {
   margin-bottom: 20px;
 }
 
-
+.header{
+	background-color: #360000;
+    color: white;
+    padding: 14px;
+    text-allign: center;
+  }
+  p{
+  font-size: 20px;
+  
+  }
+  
+  
 
   </style>
   </head>
@@ -26,7 +37,7 @@ h2 {
   <body>
   
 
-  <h2>Bug Reporting Form</h2>
+  <div class="header"><h2>Bug Reporting Form</h2></div>
   <p>Please fill out the following form to indicate any inconveniences you experienced with our software. Thank you!</p>
   
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOKeVXB9SoNh5xjo6mUxgYXmlR_im19StTvuCIPAU1P2Ivcg/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
