--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -61,12 +61,16 @@ text-align: center;
 <div class="formContainer">
 <div class="header">
 <h2>Form Submission</h2></div>
-<p> Thank you for filling out the questionnaire! Quit burning daylight and get back to work! :)</p>
+<!--<p> Thank you for filling out the questionnaire! Quit burning daylight and get back to work! :)</p>-->
+<p> Thank you for filling out the questionnaire! Your name has been recorded and you will receive a prize next week.</p>
+
+<p>If you would like to report bugs or suggest improvements regarding anything you experimented with today, please fill out this form:</p> 
+<p href="https://forms.gle/NiMzyq3WfsWv3fdZ7">https://forms.gle/NiMzyq3WfsWv3fdZ7</p>
+<p>You may receive additional prizes for completing this form.<p>
+<p>Enjoy the rest of your day!<p>
 <button class="login-button" id="backtocontrol">Back to Portal</button>
 
 
 </div>
 </body>
 </html>
-
-
