--- a/templates/juniorQuestionnaire.html
+++ b/templates/juniorQuestionnaire.html
@@ -18,6 +18,7 @@
       	padding: 40px;
       	width: 100%;
       	max-width: 600px;
+        margin-bottom: 5px;
     }
     h2{
     	text-align: center;
@@ -144,11 +145,13 @@
      	background-color: #cb5151ff;
         padding: 10px;
         font-size: 18px;
+        color: white;
       }
       
  .styled-checkbox {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
   accent-color: #3c78d8ff;
   cursor: pointer;
 }
@@ -163,8 +166,8 @@
       color: white;
       position: absolute;
       top: -1px;
-      left: 4px;
-      width: 3px;
+      left: -1px;
+      width: 5px;
      }
       
 .container {
@@ -244,35 +247,35 @@
 	
     <p>What topic do you want to present for?</p>
     <div class = "optionsColor">    
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Biology/Biotech
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Chemistry/Materials Science
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Computer Science/AI
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Earth Space Systems Science
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Economics/Social Issues
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Engineering
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Math
   <span class="checkmark"></span>
 </label><br>
-    <label class="container">
+    <label class="styled-checkbox">
   <input type="checkbox" name="Preferred Topics" checked="checked">Physics
   <span class="checkmark"></span>
 </label><br>
