--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -234,13 +234,13 @@
 
       <p>Junior Presider</p>
       <div class="dropdown">
-        <button id="presiderButton" class="dropdown-button">Select Junior Presider</button>
+        <button id="presiderButton" class="dropdown-button" disabled=true>Select Junior Presider</button>
         <div class="dropdown-content" id="presiderDropdown"></div>
       </div>
       
       <p>Backup Presider</p>
       <div class="dropdown">
-        <button id="backuppresiderButton" class="dropdown-button">Select Junior Presider</button>
+        <button id="backuppresiderButton" class="dropdown-button" disabled=true>Select Backup Presider</button>
         <div class="dropdown-content" id="backuppresiderDropdown"></div>
       </div>
       
