--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -565,6 +565,7 @@ document.querySelectorAll("#availabilityTable tr").forEach(row => {
             });
     
     console.log(JSON.stringify(data));
+    window.location.href = "/thankyou";
 }
 
 // Example usage
