--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -67,6 +67,7 @@ text-align: center;
 <p>If you would like to report bugs or suggest improvements regarding anything you experimented with today, please fill out this form:</p> 
 <p href="https://forms.gle/NiMzyq3WfsWv3fdZ7">https://forms.gle/NiMzyq3WfsWv3fdZ7</p>
 <p>You may receive additional prizes for completing this form.<p>
+<p>Also i know the adding friends thing is not very nice looking rn, that WILL be improved</p>
 <p>Enjoy the rest of your day!<p>
 <button class="login-button" id="backtocontrol">Back to Portal</button>
 
