--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -246,7 +246,9 @@
       </div>
 
       <div class="extra">
+	<a href="moderator.html">
         <button type="submit" onclick="uploadFiles()">Back to Moderator Page</button>
+	</a>
       </div>
     </form>
   </div>
