--- a/templates/home.html
+++ b/templates/home.html
@@ -54,9 +54,9 @@ h2 {
   <img src="Downloads/logo.png" alt="logo" class="my-image">
 
   <h2>SMCS Symposium Scheduler</h2>
-  <a href="index.html">
-  <button class="login-button" id="login">Log In</button>
-  </a>
+  
+  <button class="login-button" id="login"  onclick="window.location.href='/'">Log In</button>
+  
   
 
 
