--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -65,7 +65,8 @@ text-align: center;
 <p> Thank you for filling out the questionnaire! Your name has been recorded and you will receive a prize next week.</p>
 
 <p>If you would like to report bugs or suggest improvements regarding anything you experimented with today, please fill out this form:</p> 
-<p href="https://forms.gle/NiMzyq3WfsWv3fdZ7">https://forms.gle/NiMzyq3WfsWv3fdZ7</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOKeVXB9SoNh5xjo6mUxgYXmlR_im19StTvuCIPAU1P2Ivcg/viewform?embedded=true" width="640" height="995" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 <p>You may receive additional prizes for completing this form.<p>
 <p>Also i know the adding friends thing is not very nice looking rn, that WILL be improved</p>
 <p>Enjoy the rest of your day!<p>
