--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -496,9 +496,9 @@ function validateForm() {
 
 
 function completeForm() {
-	if (validateForm()) {
+	//if (validateForm()) {
     	collectFormData();
-    }
+    //}
 }
 
 function collectFormData() {
