--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -422,8 +422,8 @@ seniors.forEach(senior => {
         friendDropdown.style.display = "none"; // Hide dropdown after selection
     });
     friendDropdown.appendChild(option);
-    friendDropdown.style.overflowY="auto";
-    friendDropdown.style.maxHeight="200px";
+    //friendDropdown.style.overflowY="auto";
+    //friendDropdown.style.maxHeight="200px";
 });
 
 })
