--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -227,7 +227,7 @@
 	<h4>Questions marked with * are required.</h4>
     <form>
       <p>Presentation Title*</p>
-      <textarea id="presTitle" rows="3" cols="50" placeholder="Blimp makes me limp [change if current class is fot]"></textarea>
+      <textarea id="presTitle" rows="3" cols="50" placeholder="Enter the title of your presentation here"></textarea>
 
       <p>Project Topic (Choose 1)*</p>
       <div class="optionsColor" id="projectTopics"></div>
@@ -245,7 +245,7 @@
       </div>
       
       <p>Presider Introduction*</p>
-      <textarea id="presIntro" rows="3" cols="50" placeholder="My blimp no fly"></textarea>
+      <textarea id="presIntro" rows="3" cols="50" placeholder="Enter how you would like your presider to introduce you"></textarea>
 
 
 <p>Presenting with a Friend?</p>
