--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@ h2 {
 
   <h2>SMCS Symposium Scheduler</h2>
   
-  <button class="login-button" id="login"  onclick="window.location.href='/'">Log In</button>
+  <button class="login-button" id="login"  onclick="window.location.href='login.html'">Log In</button>
   
   
 
