--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
   <style>
  body {
   min-height: 1000px;
+  height: 100%;
+  background-attachment: fixed;
   background: linear-gradient(180deg,  #360000 , black);
   font-family: Assistant, sans-serif;
   display: flex;
